# games101-rust-framework

./: .gitattributes  Cargo.toml  README.md
homework0/: Cargo.toml
homework0/src/: lib.rs  main.rs
homework0/tests/: tests.rs
homework1/: Cargo.toml
homework1/src/: display.rs  lib.rs  main.rs  rst.rs  triangle.rs
homework1/tests/: tests.rs
homework2/: Cargo.toml
homework2/src/: lib.rs  main.rs  rst.rs  triangle.rs
homework2/tests/: tests.rs
homework3/: Cargo.toml
homework3/src/: lib.rs  main.rs  rst.rs  shader.rs
homework4/: Cargo.toml
homework4/src/: lib.rs  main.rs  rst.rs
homework5/: Cargo.toml
homework5/src/: lib.rs  main.rs  object.rs  renderer.rs  scene.rs  sphere.rs  triangle.rs
homework6/: Cargo.toml
homework6/src/: bounds3.rs  bvh.rs  intersection.rs  lib.rs  light.rs  main.rs  material.rs  object.rs  ray.rs  renderer.rs  scene.rs  triangle.rs
homework6/src/object/: intersection.rs  material.rs  object.rs
homework7/: Cargo.toml
homework7/src/: bvh.rs  lib.rs  main.rs  ray.rs  renderer.rs  scene.rs  triangle.rs
homework7/src/global/: mod.rs
homework7/src/object/: intersection.rs  material.rs  mod.rs  object.rs
homework8/: Cargo.toml
homework8/src/: main.rs
homework8/src/application/: application.rs  mod.rs
homework8/src/drawer/: drawer.rs  mod.rs  types.rs
homework8/src/rope/: mod.rs  rope.rs  types.rs
homework8/src/rst/: mod.rs  object.rs
utils/: Cargo.toml
utils/src/: graphic.rs  lib.rs  rasterizer.rs  rgb.rs  triangle.rs
utils/tests/: tests.rs
